<resources>
    <string name="app_name">Dactiv</string>
    <string name="default_channel">DactiverMember</string>

    <string name="title_profile">Profile</string>
    <string name="title_satker">Satker</string>
    <string name="title_kegiatan">Kegiatan</string>
    <string name="title_event">Event</string>
    <string name="title_home">Beranda</string>
    <string name="title_sign_in">Sign In</string>
    <string name="text_no_internet">No Internet</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_email_hint">youremail@mail.com</string>
    <string name="text_email_address">Email Address</string>
    <string name="text_password">Password</string>
    <string name="text_password_hint">special key</string>
    <string name="text_or">Or</string>
    <string name="text_register">Register</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_jabatan">Jabatan</string>
    <string name="text_golongan">Golongan</string>
    <string name="text_status">Status</string>
    <string name="text_sign_out">Sign Out</string>
    <string name="text_full_name">Full Name</string>
    <string name="text_full_name_hint">John Doe</string>
    <string name="text_select_photo">Select a Picture</string>
    <string name="title_profile_edit">Profile Edit</string>
    <string name="text_save">Save Changes</string>
    <string name="text_change_photo">Change Photo</string>
    <string name="text_mobile_number">Phone Number</string>
    <string name="text_mobile_number_hint">08xxx</string>
    <string name="text_nip">NIP</string>
    <string name="text_nip_hint">Nomor Induk Pegawai</string>
    <string name="text_close">Close</string>
    <string name="text_no_satker_data">We not able to show any data for you because there is nothing to show</string>
    <string name="text_ooh">Ouuuh!</string>
    <string name="text_automatic_data">or</string>
    <string name="text_add">Add Record</string>
    <string name="text_nama_satker">Nama Satker</string>
    <string name="title_add_satker">Add Satker</string>
    <string name="text_deskripsi_hint">Deskripsi Singkat</string>
    <string name="text_deskripsi">Deskripsi</string>
    <string name="text_kepala">Kepala</string>
    <string name="text_admin">Admin</string>
    <string name="text_eselon">Eselon</string>
    <string name="text_admin_hint">Pilih admin atas data ini</string>
    <string name="text_kepala_hint">Kepala Satuan Kerja</string>
    <string name="text_eselon_hint">Dapat memilih lebih dari satu</string>
    <string name="text_nama_satker_hint">Satuan Kerja</string>
    <string name="text_waiting">Waiting</string>
    <string name="text_add_event">Event</string>
    <string name="text_description_dummy">Event dan Meeting deskripsi yang menjelaskan isi satuan kerja terkait</string>
    <string name="text_plus">+</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_kode_kegiatan">Kode Kegiatan</string>
    <string name="text_kode_kegiatan_hint">1000.0000.xxxx</string>
    <string name="text_bagian">Bagian</string>
    <string name="text_bagian_hint">Bagian / Jabatan</string>
    <string name="text_penanggung">Penanggung Jawab</string>
    <string name="text_penanggung_hint">Pelaksana</string>
    <string name="text_satker">Satker</string>
    <string name="text_satker_hint">Satuan Kerja</string>
    <string name="title_add_kegiatan">Kegiatan</string>
    <string name="text_anggaran_hint">100xxx</string>
    <string name="text_anggaran">Anggaran</string>
    <string name="text_jadwal_pelaksana">Jadwal Pelaksana</string>
    <string name="text_jadwal_pelaksana_hint">Tanggal</string>
    <string name="text_durasi">Durasi</string>
    <string name="text_durasi_hint">Jumlah Hari</string>
    <string name="text_nama_kegiatan">Nama Kegiatan</string>
    <string name="text_nama_kegiatan_hint">Kegiatan</string>
    <string name="text_currency">Rp</string>
    <string name="text_create_new_data">Hei press that button if you want to add more data!</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="title_detail">Detail</string>
    <string name="text_message">Short messages</string>
    <string name="text_send">Send</string>

    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission. The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="text_value">Value</string>
    <string name="text_kehadiran">Kehadiran</string>
    <string name="text_realisasi">Realisasi Anggaran</string>
    <string name="text_tanggal_pelaksanaan">Tanggal Pelaksanaan</string>
    <string name="text_offline">No Internet, Don\'t worry we will try to catch the data from our secret place.</string>
    <string name="text_no_attendent">No one here</string>
    <string name="title_rapat">Rapat</string>
    <string name="text_agenda_rapat">Agenda Rapat</string>
    <string name="text_agenda_rapat_hint">Agenda</string>
    <string name="text_jadwal_rapat">Jadwal Rapat</string>
    <string name="title_add_rapat">Rapat</string>
    <string name="text_tanggal_batas_tindak_lanjut">Tanggal Batas Tindak Lanjut</string>
    <string name="text_no_tulen">No Tulen</string>
    <string name="text_no_tulen_hint">Keterangan Hasil Rapat</string>
    <string name="text_tanggal_tindak_lanjut">Tanggal Tindak Lanjut</string>
    <string name="text_alasan">Alasan Keterlambatan</string>
    <string name="text_alasan_hint">Alasan</string>

</resources>
