<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutParent"
    android:background="@color/colorBackgroundPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="?attr/actionBarSize"
    tools:context=".activity.profile.EditProfileActivity">

    <include layout="@layout/toolbar_primary"/>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_primary"
        app:layout_insetEdge="top"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusable="true"
            style="@style/AppTheme.Layout.Parent"
            android:focusableInTouchMode="true">

            <requestFocus />

            <ImageView
                android:id="@+id/imagePhoto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/component_medium"
                android:src="@drawable/empty_circle"/>

            <com.ismealdi.dactiv.components.AmButton
                app:AmFont="S"
                android:id="@+id/buttonChangePhoto"
                style="@style/AppTheme.ButtonInput.Text"
                android:text="@string/text_change_photo"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/component_big"/>

            <LinearLayout
                android:background="@drawable/input_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/component_medium"
                android:orientation="vertical">
                <com.ismealdi.dactiv.components.AmTextView
                    style="@style/AppTheme.TextLabelInput"
                    app:AmFont="M"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_email_address" />

                <com.ismealdi.dactiv.components.AmEditText
                    style="@style/AppTheme.TextInput"
                    app:AmFont="R"
                    android:enabled="false"
                    android:id="@+id/textEmail"
                    android:hint="@string/text_email_hint"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"/>
            </LinearLayout>

            <LinearLayout
                android:background="@drawable/input_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/component_medium"
                android:orientation="vertical">
                <com.ismealdi.dactiv.components.AmTextView
                    style="@style/AppTheme.TextLabelInput"
                    app:AmEdit="@id/textNip"
                    app:AmFont="M"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_nip" />

                <com.ismealdi.dactiv.components.AmEditText
                    style="@style/AppTheme.TextInput"
                    app:AmFont="R"
                    android:id="@+id/textNip"
                    android:hint="@string/text_nip_hint"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:maxLength="15"
                    android:digits="1234567890."
                    android:inputType="numberDecimal"
                    android:singleLine="true"/>
            </LinearLayout>

            <LinearLayout
                android:background="@drawable/input_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/component_medium"
                android:orientation="vertical">
                <com.ismealdi.dactiv.components.AmTextView
                    style="@style/AppTheme.TextLabelInput"
                    app:AmEdit="@id/textDisplayName"
                    app:AmFont="M"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_full_name" />

                <com.ismealdi.dactiv.components.AmEditText
                    style="@style/AppTheme.TextInput"
                    app:AmFont="R"
                    android:id="@+id/textDisplayName"
                    android:hint="@string/text_full_name_hint"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="textPersonName"
                    android:singleLine="true"/>
            </LinearLayout>

            <LinearLayout
                android:background="@drawable/input_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/component_medium"
                android:orientation="vertical">
                <com.ismealdi.dactiv.components.AmTextView
                    style="@style/AppTheme.TextLabelInput"
                    app:AmEdit="@id/textPhoneNumber"
                    app:AmFont="M"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_mobile_number" />

                <com.ismealdi.dactiv.components.AmEditText
                    style="@style/AppTheme.TextInput"
                    app:AmFont="R"
                    android:id="@+id/textPhoneNumber"
                    android:hint="@string/text_mobile_number_hint"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:maxLength="12"
                    android:singleLine="true"/>
            </LinearLayout>

            <LinearLayout
                android:background="@drawable/input_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/component_medium"
                android:orientation="vertical">
                <com.ismealdi.dactiv.components.AmTextView
                    style="@style/AppTheme.TextLabelInput"
                    app:AmFont="M"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_golongan" />

                <com.ismealdi.dactiv.components.AmSpinner
                    app:AmFont="R"
                    android:id="@+id/textGolongan"
                    style="@style/AppTheme.SpinnerInput"
                    android:dropDownVerticalOffset="35dp"
                    android:layout_marginTop="-8dp"
                    android:layout_marginLeft="-8dp"
                    android:layout_marginRight="-8dp"
                    android:layout_marginBottom="@dimen/component_small"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
            </LinearLayout>

            <LinearLayout
                android:background="@drawable/input_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/component_medium"
                android:orientation="vertical">
                <com.ismealdi.dactiv.components.AmTextView
                    style="@style/AppTheme.TextLabelInput"
                    app:AmFont="M"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_jabatan" />

                <com.ismealdi.dactiv.components.AmSpinner
                    app:AmFont="R"
                    android:id="@+id/textJabatan"
                    style="@style/AppTheme.SpinnerInput"
                    android:dropDownVerticalOffset="35dp"
                    android:layout_marginTop="-8dp"
                    android:layout_marginLeft="-8dp"
                    android:layout_marginRight="-8dp"
                    android:layout_marginBottom="@dimen/component_small"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>